// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render relation select when geo field is geo_point 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Geometry label"
    labelType="label"
  >
    <EuiFieldText
      compressed={true}
      onChange={[Function]}
      value="My shape"
    />
  </EuiFormRow>
  <EuiFormRow
    className="mapGeometryFilter__geoFieldSuperSelectWrapper"
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Filtered field"
    labelType="label"
  >
    <EuiSuperSelect
      className="mapGeometryFilter__geoFieldSuperSelect"
      compressed={true}
      fullWidth={true}
      hasDividers={true}
      isInvalid={false}
      itemClassName="mapGeometryFilter__geoFieldItem"
      onChange={[Function]}
      options={
        Array [
          Object {
            "inputDisplay": <EuiText
              component="span"
              size="s"
            >
              <EuiTextColor
                color="subdued"
              >
                <small>
                  My index
                </small>
              </EuiTextColor>
              <br />
              my geo field
            </EuiText>,
            "value": "My index/my geo field",
          },
        ]
      }
      valueOfSelected="My index/my geo field"
    />
  </EuiFormRow>
  <EuiSpacer
    size="m"
  />
  <EuiTextAlign
    textAlign="right"
  >
    <EuiButton
      fill={true}
      isDisabled={false}
      onClick={[Function]}
      size="s"
    >
      Create filter
    </EuiButton>
  </EuiTextAlign>
</EuiForm>
`;

exports[`should not show "within" relation when filter geometry is not closed 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Geometry label"
    labelType="label"
  >
    <EuiFieldText
      compressed={true}
      onChange={[Function]}
      value="My shape"
    />
  </EuiFormRow>
  <EuiFormRow
    className="mapGeometryFilter__geoFieldSuperSelectWrapper"
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Filtered field"
    labelType="label"
  >
    <EuiSuperSelect
      className="mapGeometryFilter__geoFieldSuperSelect"
      compressed={true}
      fullWidth={true}
      hasDividers={true}
      isInvalid={false}
      itemClassName="mapGeometryFilter__geoFieldItem"
      onChange={[Function]}
      options={
        Array [
          Object {
            "inputDisplay": <EuiText
              component="span"
              size="s"
            >
              <EuiTextColor
                color="subdued"
              >
                <small>
                  My index
                </small>
              </EuiTextColor>
              <br />
              my geo field
            </EuiText>,
            "value": "My index/my geo field",
          },
        ]
      }
      valueOfSelected="My index/my geo field"
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Spatial relation"
    labelType="label"
  >
    <EuiSelect
      compressed={true}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "intersects",
            "value": "INTERSECTS",
          },
          Object {
            "text": "disjoint",
            "value": "DISJOINT",
          },
        ]
      }
      value="INTERSECTS"
    />
  </EuiFormRow>
  <EuiSpacer
    size="m"
  />
  <EuiTextAlign
    textAlign="right"
  >
    <EuiButton
      fill={true}
      isDisabled={false}
      onClick={[Function]}
      size="s"
    >
      Create filter
    </EuiButton>
  </EuiTextAlign>
</EuiForm>
`;

exports[`should render error message 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Geometry label"
    labelType="label"
  >
    <EuiFieldText
      compressed={true}
      onChange={[Function]}
      value="My shape"
    />
  </EuiFormRow>
  <EuiFormRow
    className="mapGeometryFilter__geoFieldSuperSelectWrapper"
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Filtered field"
    labelType="label"
  >
    <EuiSuperSelect
      className="mapGeometryFilter__geoFieldSuperSelect"
      compressed={true}
      fullWidth={true}
      hasDividers={true}
      isInvalid={false}
      itemClassName="mapGeometryFilter__geoFieldItem"
      onChange={[Function]}
      options={
        Array [
          Object {
            "inputDisplay": <EuiText
              component="span"
              size="s"
            >
              <EuiTextColor
                color="subdued"
              >
                <small>
                  My index
                </small>
              </EuiTextColor>
              <br />
              my geo field
            </EuiText>,
            "value": "My index/my geo field",
          },
        ]
      }
      valueOfSelected="My index/my geo field"
    />
  </EuiFormRow>
  <EuiSpacer
    size="m"
  />
  <EuiFormErrorText>
    Simulated error
  </EuiFormErrorText>
  <EuiTextAlign
    textAlign="right"
  >
    <EuiButton
      fill={true}
      isDisabled={false}
      onClick={[Function]}
      size="s"
    >
      Create filter
    </EuiButton>
  </EuiTextAlign>
</EuiForm>
`;

exports[`should render relation select when geo field is geo_shape 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Geometry label"
    labelType="label"
  >
    <EuiFieldText
      compressed={true}
      onChange={[Function]}
      value="My shape"
    />
  </EuiFormRow>
  <EuiFormRow
    className="mapGeometryFilter__geoFieldSuperSelectWrapper"
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Filtered field"
    labelType="label"
  >
    <EuiSuperSelect
      className="mapGeometryFilter__geoFieldSuperSelect"
      compressed={true}
      fullWidth={true}
      hasDividers={true}
      isInvalid={false}
      itemClassName="mapGeometryFilter__geoFieldItem"
      onChange={[Function]}
      options={
        Array [
          Object {
            "inputDisplay": <EuiText
              component="span"
              size="s"
            >
              <EuiTextColor
                color="subdued"
              >
                <small>
                  My index
                </small>
              </EuiTextColor>
              <br />
              my geo field
            </EuiText>,
            "value": "My index/my geo field",
          },
        ]
      }
      valueOfSelected="My index/my geo field"
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label="Spatial relation"
    labelType="label"
  >
    <EuiSelect
      compressed={true}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "intersects",
            "value": "INTERSECTS",
          },
          Object {
            "text": "disjoint",
            "value": "DISJOINT",
          },
          Object {
            "text": "within",
            "value": "WITHIN",
          },
        ]
      }
      value="INTERSECTS"
    />
  </EuiFormRow>
  <EuiSpacer
    size="m"
  />
  <EuiTextAlign
    textAlign="right"
  >
    <EuiButton
      fill={true}
      isDisabled={false}
      onClick={[Function]}
      size="s"
    >
      Create filter
    </EuiButton>
  </EuiTextAlign>
</EuiForm>
`;
